# rarpar

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.githooks/: pre-commit  scan-secrets
.github/docker/: Dockerfile
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/weaver-par2/: Cargo.toml
crates/weaver-par2/benches/: par2_repair.rs
crates/weaver-par2/examples/: bench_heavy_damage.rs  wasm_par2_check.rs  wpar2.rs
crates/weaver-par2/src/: lib.rs  matrix.rs  md5_simd.rs  placement.rs  repair.rs  repairer.rs  verify.rs
crates/weaver-par2/tests/: repair_stress.rs  wgpu_stream_repair.rs
crates/weaver-par2/tests/support/: synthetic_par2.rs
crates/weaver-reed-solomon/: Cargo.toml
crates/weaver-reed-solomon/benches/: gf16_gpu_vs_cpu.rs
crates/weaver-reed-solomon/examples/: gf_wasm_bench.rs  gf_wasm_diff.rs  xor_jit_micro.rs
crates/weaver-reed-solomon/src/: gf.rs  gf_pmul.rs  gf_simd.rs  lib.rs  matrix.rs  matrix_tiled.rs  wgpu_gf16.rs
crates/weaver-reed-solomon/src/xor_jit/: codegen.rs  codegen512.rs  deps.rs  emit.rs  memory.rs  mod.rs  transpose.rs  transpose512.rs
crates/weaver-unrar/: Cargo.toml
crates/weaver-unrar/examples/: blake2sp_wasm_check.rs  crypto_baseline.rs  host_aes_smoke.rs  stream_to_sink.rs  wasm_extract_check.rs  wasm_extract_conformance.rs
crates/weaver-unrar/src/: crc.rs  crypto.rs  extract.rs  hash_pipeline.rs  lib.rs  path.rs  probe.rs  types.rs
crates/weaver-unrar/src/archive/: cache.rs  facts.rs  member.rs  mod.rs  parse.rs
crates/weaver-unrar/src/crypto/: differential_tests.rs  mod.rs
crates/weaver-unrar/src/crypto/backend/: aws_lc.rs  host.rs  mod.rs  rust.rs
crates/weaver-unrar/src/crypto/blake2sp_simd/: mod.rs  simd.rs  tests.rs
crates/weaver-unrar/src/decompress/lz/: parallel.rs
crates/weaver-unrar/src/header/: extra.rs
crates/weaver-unrar/src/rar4/: mod.rs
crates/weaver-unrar/tests/: integration.rs  wasm_host_aes_smoke.rs  wasm_host_extract_conformance.rs
crates/weaver-unrar/tests/fixtures/rar4/: old-rar-provenance.md
docs/: packaging.md  publishing.md  rarpar-compatibility.md
tools/rarpar/: Cargo.toml  LICENSE
tools/rarpar/src/: cleanup.rs  cli.rs  compat_unrar.rs  discovery.rs  error.rs  main.rs  par2.rs  password.rs  rar.rs  report.rs
tools/rarpar/tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: main.rs
