[workspace]
members = [
    "crates/weaver-reed-solomon",
    "crates/weaver-unrar",
    "crates/weaver-par2",
    "tools/rarpar",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/scryer-media/rarpar"

[workspace.dependencies]
aes = { version = "0.9", features = ["zeroize"] }
aws-lc-rs = { version = "1.16", default-features = false, features = ["non-fips"] }
aws-lc-sys = { version = "0.41", default-features = false, features = ["all-bindings"] }
blake2s_simd = { version = "1.0", default-features = false, features = ["std"] }
cbc = { version = "0.2", features = ["zeroize"] }
hmac = { version = "0.13", default-features = false }
sha2 = { version = "0.11", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
crc32fast = { version = "1.4", default-features = false, features = ["std"] }
filetime = { version = "0.2.29", default-features = false }
libc = { version = "0.2", default-features = false }
md-5 = { version = "0.11", default-features = false, features = ["alloc"] }
memchr = { version = "2", default-features = false, features = ["std"] }
memmap2 = { version = "0.9", default-features = false }
rayon = { version = "1.10", default-features = false }
rmp-serde = { version = "1.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "rc", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
subtle = { version = "2", default-features = false }
tempfile = { version = "3", default-features = false, features = ["getrandom"] }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
unicode-normalization = { version = "0.1.25", default-features = false }
windows-sys = { version = "0.61", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
