[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
clap_complete = "4"
clap_mangen = "0.2"
rarpar = { path = "../tools/rarpar", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
