[package]
name = "weaver-reed-solomon"
description = "Shared Reed-Solomon finite-field kernels for Weaver repair engines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Opt-in Apple-GPU (Metal) GF(2^16) backend. Off by default so CPU-only
# consumers never link objc2/Metal. The objc2* deps below are Apple-Silicon-only
# and optional; the `metal_gf16` module and its tests are gated on
# `target_os = "macos", target_arch = "aarch64"` because objc2 cannot build on
# other platforms.
metal = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-metal"]
# Opt-in portable-GPU (wgpu: Vulkan/DX12/Metal) GF(2^16) backend for the
# platforms the native Metal backend does not cover. Off by default — wgpu is
# a heavy dependency tree. The `wgpu_gf16` module is gated on this feature.
wgpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
pollster = { version = "1.0.0", default-features = false, optional = true }
rayon = { workspace = true, default-features = false }
wgpu = { version = "30.0.0", optional = true }

# W^X executable memory for the x86-64 XOR-JIT GF(2^16) multiply tier.
[target.'cfg(target_arch = "x86_64")'.dependencies]
memmap2 = { workspace = true, default-features = false }

# `criterion` hard-`compile_error!`s on wasm targets, and this crate builds for
# wasm, so the bench harness is scoped to native targets only.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.5"

# GPU-vs-CPU GF(2^16) throughput. `required-features` keeps it out of default
# builds (and `--all-targets` lints) on machines without the wgpu stack.
[[bench]]
name = "gf16_gpu_vs_cpu"
path = "benches/gf16_gpu_vs_cpu.rs"
harness = false
required-features = ["wgpu"]

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
objc2 = { version = "0.6.2", default-features = false, features = ["std"], optional = true }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSRange", "NSString"], optional = true }
objc2-metal = { version = "0.3.2", optional = true, default-features = false, features = [
    "MTLAllocation",
    "MTLBlitCommandEncoder",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
] }
