[package]
name = "weaver-unrar"
description = "RAR archive reading, decompression, and streaming extraction only"
version = "0.1.1"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
exclude = ["tests/fixtures/**"]

# Crypto backend selection.
#
# Exactly one backend supplies the AES-CBC / HMAC-SHA256 / SHA-256 seam
# consumed by `crate::crypto`. Precedence: on native (non-wasm) targets the
# AWS-LC backend wins whenever `crypto-aws-lc` is enabled, even if
# `crypto-rust` is also on (both modules still compile, which powers the
# differential tests). On `wasm` targets the AWS-LC deps vanish via a target
# gate, so `crypto-rust` is selected automatically. Enabling neither backend
# (on a target where AWS-LC is unavailable) is a compile error.
[features]
default = ["crypto-aws-lc"]
crypto-aws-lc = ["dep:aws-lc-rs", "dep:aws-lc-sys"]
crypto-rust = ["dep:sha2", "dep:hmac", "dep:aes", "dep:cbc"]
# Back-compat alias for existing workspace dependency declarations (was a
# no-op); selects the native AWS-LC backend.
native-crypto = ["crypto-aws-lc"]
slow-tests = []

[dependencies]
weaver-reed-solomon = { path = "../weaver-reed-solomon", version = "0.1.0", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
blake2s_simd = { workspace = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
serde = { workspace = true }
rmp-serde = { workspace = true, default-features = false }
rayon = { workspace = true, default-features = false }
tempfile = { workspace = true }
memchr = { workspace = true }
unicode-normalization = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Time",
] }

[dev-dependencies]
tracing-subscriber.workspace = true

# Criterion pulls in Rayon by default and hard-`compile_error!`s on wasm
# (wasi) targets. Building the `crypto_baseline` example for wasm compiles the
# crate's dev-dependencies, so criterion is scoped to non-wasm targets; the
# `archive_hotspots` bench only runs natively anyway.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "archive_hotspots"
harness = false
