[package]
name = "weaver-unrar"
description = "RAR archive reading, decompression, and streaming extraction only"
version = "0.3.0"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
exclude = ["tests/fixtures/**"]

# Crypto backend selection.
#
# Exactly one backend supplies the AES-CBC / HMAC-SHA256 / SHA-256 seam
# consumed by `crate::crypto`. Precedence: on native (non-wasm) targets the
# AWS-LC backend wins whenever `crypto-aws-lc` is enabled, even if
# `crypto-rust` is also on (both modules still compile, which powers the
# differential tests). On `wasm` targets the AWS-LC deps vanish via a target
# gate, so `crypto-rust` is selected automatically. Enabling neither backend
# (on a target where AWS-LC is unavailable) is a compile error.
[features]
default = ["crypto-aws-lc"]
crypto-aws-lc = ["dep:aws-lc-rs", "dep:aws-lc-sys"]
crypto-rust = ["dep:sha2", "dep:hmac", "dep:aes", "dep:cbc"]
# WASM-only backend that delegates bulk AES-CBC to a host function
# (`host_aes_cbc_decrypt`, in the embedder-neutral `host` import namespace)
# while reusing the RustCrypto KDF primitives in-wasm. It therefore pulls in
# `crypto-rust`. The host backend module itself is target-gated to wasm;
# enabling this feature on a native target is harmless (the module is cfg'd
# out and AWS-LC or the RustCrypto backend is selected instead).
crypto-host = ["crypto-rust"]
# WASM-only: delegate the bulk member-data CRC-32 to a host function
# (`host_crc32`, same neutral `host` namespace as `crypto-host`'s AES) instead
# of computing it in-wasm with `crc32fast`. Opt-in and wasm-only in intent; on
# native targets it is a harmless no-op — the `crate::crc::Crc32` seam keeps
# its portable `crc32fast` backend regardless. Adds NO new dependency:
# `crc32fast` is already a normal dep that the native/portable seam path (and
# the header/probe CRCs) use unchanged.
crc-host = []
# Retarget the host imports' namespace from the embedder-neutral `host` to
# `extism:host/user`, for Extism SDKs whose user host functions are pinned to
# that module. Function names and signatures are identical either way; this
# changes only the wasm import module string.
host-abi-extism = []
# Back-compat alias for existing workspace dependency declarations (was a
# no-op); selects the native AWS-LC backend.
native-crypto = ["crypto-aws-lc"]
slow-tests = []

[dependencies]
weaver-reed-solomon = { path = "../weaver-reed-solomon", version = "0.2.2", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
blake2s_simd = { workspace = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
serde = { workspace = true }
rmp-serde = { workspace = true, default-features = false }
rayon = { workspace = true, default-features = false }
tempfile = { workspace = true }
memchr = { workspace = true }
unicode-normalization = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Time",
] }

[dev-dependencies]
tracing-subscriber.workspace = true

# Criterion pulls in Rayon by default and hard-`compile_error!`s on wasm
# (wasi) targets. Building the `crypto_baseline` example for wasm compiles the
# crate's dev-dependencies, so criterion is scoped to non-wasm targets; the
# `archive_hotspots` bench only runs natively anyway.
#
# The `wasm_host_aes_smoke` integration test drives the wasm `crypto-host`
# example through a native `wasmtime` host that supplies a reference
# `host_aes_cbc_decrypt`. Those deps (wasmtime + WASI preview1 + a RustCrypto
# reference AES) are native-only tooling for that harness and, like criterion,
# MUST stay off the wasm example build — hence this same non-wasm target gate.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.5"
wasmtime = "46"
wasmtime-wasi = "46"
aes = { workspace = true }
cbc = { workspace = true }

[[bench]]
name = "archive_hotspots"
harness = false
