[package]
name = "rarpar"
description = "Intelligent RAR/PAR2 repair and extraction CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rarpar"
path = "src/main.rs"

[features]
default = ["runtime"]
runtime = [
    "dep:serde",
    "dep:serde_json",
    "dep:tempfile",
    "dep:thiserror",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:weaver-par2",
    "dep:weaver-unrar",
]

[dependencies]
weaver-par2 = { path = "../../crates/weaver-par2", version = "0.1.1", default-features = false, features = [
    "native-crypto",
], optional = true }
weaver-unrar = { path = "../../crates/weaver-unrar", version = "0.1.1", default-features = false, features = [
    "native-crypto",
], optional = true }
clap = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
