[package]
name = "rarpar"
description = "Intelligent RAR/PAR2 repair and extraction CLI"
version = "0.2.5"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
publish = false

[[bin]]
name = "rarpar"
path = "src/main.rs"

[features]
default = ["runtime"]
runtime = [
    "dep:serde",
    "dep:serde_json",
    "dep:tempfile",
    "dep:thiserror",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:weaver-par2",
    "weaver-par2/native-crypto",
    "dep:weaver-unrar",
    "weaver-unrar/native-crypto",
]
metal = ["runtime", "weaver-par2/metal"]
wgpu = ["runtime", "weaver-par2/wgpu"]

[dependencies]
weaver-par2 = { path = "../../crates/weaver-par2", version = "0.2.3", default-features = false, optional = true }
weaver-unrar = { path = "../../crates/weaver-unrar", version = "0.3.1", default-features = false, optional = true }
clap = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
